# fastapi-wraps

./: .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint-n-test.yml
examples/: use_dependencies_in_decorator.py  use_request_in_decorator.py
fastapi_wraps/: __init__.py  fastapi_wraps.py  providers.py  wrappers.py
tests/: conftest.py  fastapi_wraps_test.py
