[tool.poetry]
name = "fastapi-wraps"
version = "0.1.0"
description = ""
authors = ["Paweł Rubin <pawelrubindev@gmail.com>"]
keywords = ["fastapi", "decorator", "functools"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/pawelrubin/fastapi-wraps"
repository = "https://github.com/pawelrubin/fastapi-wraps"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.83.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
coverage = "^6.4.1"
ipython = "^8.4.0"
mypy = "^0.961"
pre-commit = "^2.19.0"
pylint = "^2.15.2"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyupgrade = "^2.37.3"
requests = "^2.28.1"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_unimported = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
